# social_authentication

./: pyproject.toml
authentication/: settings.py  timestampModel.py  urls.py  utils.py
social/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
